--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             {% block nav %}{% endblock %}
         </nav>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
