--- a/config/templates/nav.html
+++ b/config/templates/nav.html
@@ -14,14 +14,14 @@
                     <a class="nav-link {% if category == "booking" %}active{% endif %}" href="/booking">Book a table</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/user/logout">Logout</a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link {% if category == "signup" %}active{% endif %}" href="/signup">Sign up</a>
+                    <a class="nav-link {% if category == "signup" %}active{% endif %}" href="/user/signup">Sign up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if category == "login" %}active{% endif %}" href="/login">Login</a>
+                    <a class="nav-link {% if category == "login" %}active{% endif %}" href="/user/login">Login</a>
                 </li>
             {% endif %}
         </ul>
