fix missing 'with' in templates

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block nav %}
-{% include "nav.html" category="login" %}
+{% include "nav.html" with category="login" %}
 {% endblock %}
 
 {% block main %}
