--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block nav %}
-{% include "nav.html" category="signup" %}
+{% include "nav.html" with category="signup" %}
 {% endblock %}
 
 {% block main %}
