--- a/booking/templates/home.html
+++ b/booking/templates/home.html
@@ -5,7 +5,24 @@
 {% endblock %}
 
 {% block main %}
-
-Hello world!
-
+<div class="container row justify-content-center col-lg-7">
+    <h1 class="display-1">Feeling hungry?</h1>
+    <p class="lead">
+        We make booking easy. Click, show up, lettuce eat.
+    </p>
+    <div class="row">
+        {% if user.is_authenticated %}
+        <a href="/booking" class="btn btn-primary col p-3 col-12" role="button">
+            Book a table
+        </a>
+        {% else %}
+        <a href="/booking" class="btn btn-primary col p-3 col-md-6 col-12" role="button">
+            Book a table
+        </a>
+        <a href="/user/signup" class="btn btn-outline-primary col p-3 col-md-6 col-12" role="button">
+            Create an account
+        </a>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
