remove category from nav template in home.html

--- a/booking/templates/home.html
+++ b/booking/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block nav %}
-{% include "nav.html" with category="main"%}
+{% include "nav.html" %}
 {% endblock %}
 
 {% block main %}
