--- a/booking/templates/booking.html
+++ b/booking/templates/booking.html
@@ -5,5 +5,14 @@
 {% endblock %}
 
 {% block main %}
-hello world!
+<div class="container">
+    <div class="row align-items-start g-5">
+        <div class="col-12 col-md-6">
+
+        </div>
+        <div class="col-12 col-md-6">
+
+        </div>
+    </div>
+</div>
 {% endblock %}
