--- a/booking/templates/booking.html
+++ b/booking/templates/booking.html
@@ -8,10 +8,10 @@
 <div class="container">
     <div class="row align-items-start g-5">
         <div class="col-12 col-md-6">
-
+            {% include "booking_create.html"%}
         </div>
         <div class="col-12 col-md-6">
-
+            {% include "booking_list.html"%}
         </div>
     </div>
 </div>
