--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             {% block nav %}{% endblock %}
         </nav>
-        <main>
+        <main class="p-3 row justify-content-center">
             {% block main %}{% endblock %}
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
