--- a/booking/templates/booking_delete.html
+++ b/booking/templates/booking_delete.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" style="max-width: 500px;">
+<form method="post" class="col-lg-6">
     {% csrf_token %}
     <h3>You are deleting your booking @ {{ object.time_verbose }} on {{ object.date }}?</h3>
     <p>Are you sure?</p>
